fix modal overflow-x

--- a/src/style.css
+++ b/src/style.css
@@ -217,6 +217,7 @@ a.no-anchor:hover {
 }
 .modal {
   text-align: center;
+  overflow:auto !important;
 }
 @media screen and (min-width: 768px) {
   .modal:before {
